[gd_scene load_steps=15 format=3 uid="uid://bxl1xfwui17lx"]

[ext_resource type="Script" path="res://src/shared/rpg/HitBox2D.gd" id="1"]
[ext_resource type="Script" path="res://src/shared/rpg/HurtBox2D.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://oo6lnte2f7yu" path="res://src/enemy/tiny_zombie.png" id="3"]
[ext_resource type="Script" path="res://addons/StateMachine/Move2D.gd" id="4"]
[ext_resource type="Script" path="res://addons/StateMachine/StateMachine.gd" id="5"]
[ext_resource type="PackedScene" uid="uid://d3ki6uubra8xe" path="res://src/enemy/HealthDrop.tscn" id="6"]
[ext_resource type="Script" path="res://src/shared/misc/ValueFill.gd" id="7"]
[ext_resource type="Script" path="res://src/enemy/Enemy.gd" id="8"]
[ext_resource type="Script" path="res://src/shared/rpg/SoftCollision2D.gd" id="9"]
[ext_resource type="Script" path="res://addons/StateMachine/Knockback2D.gd" id="10"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(8.72286, 3.42736)

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(10.0817, 9.95882)

[sub_resource type="RectangleShape2D" id="3"]
size = Vector2(9.41358, 9.51338)

[sub_resource type="CircleShape2D" id="4"]
radius = 8.15895

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 16
script = ExtResource("8")
health_drop = ExtResource("6")

[node name="Body" type="CollisionShape2D" parent="."]
shape = SubResource("1")

[node name="Sprite" type="Sprite2D" parent="Body"]
texture = ExtResource("3")
offset = Vector2(-0.5, -5)
hframes = 8

[node name="Health" type="Node" parent="."]
script = ExtResource("7")
max_value = 20.0

[node name="HurtBox" type="Area2D" parent="."]
visible = false
position = Vector2(0, -3.11814)
collision_layer = 8
collision_mask = 0
script = ExtResource("2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("2")

[node name="HitBox" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 4
script = ExtResource("1")
damage = 5
knockback_force = 50
damage_over_time = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, -2.89542)
shape = SubResource("3")

[node name="SoftCollision2D" type="Area2D" parent="."]
visible = false
position = Vector2(0, -3.04734)
collision_layer = 64
collision_mask = 64
script = ExtResource("9")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SoftCollision2D"]
shape = SubResource("4")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("5")
initial_state = NodePath("Move2D")

[node name="Move2D" type="Node" parent="StateMachine"]
script = ExtResource("4")
speed = 100
acceleration = 500
soft_collision_multiplier = 800
kinematic_body_path = NodePath("../..")
soft_collision_path = NodePath("../../SoftCollision2D")
body_path = NodePath("../../Body")

[node name="Knockback2D" type="Node" parent="StateMachine"]
script = ExtResource("10")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[connection signal="zero_value" from="Health" to="." method="_on_Health_zero_value"]
[connection signal="damaged" from="HurtBox" to="." method="_on_HurtBox_damaged"]
[connection signal="hit" from="HurtBox" to="." method="_on_HurtBox_hit"]
[connection signal="invincibility_timeout" from="HurtBox" to="." method="_on_HurtBox_invincibility_timeout"]
[connection signal="knockback" from="HurtBox" to="." method="_on_HurtBox_knockback"]
[connection signal="run" from="StateMachine/Move2D" to="AnimationPlayer" method="play" binds= ["Run"]]
[connection signal="knockback_finished" from="StateMachine/Knockback2D" to="." method="_on_Knockback2D_knockback_finished"]
